Remove jQuery and Less

--- a/templates/index.html
+++ b/templates/index.html
@@ -93,7 +93,7 @@ $has_next = 1 if (($pn * 30) < $count);
       % }
     </div>
     
-    <script src="/js/jquery-1.11.0.min.js"></script>
+    <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="/js/nav-dropdown.js"></script>
   </body>
 </html>
