--- a/templates/view.html
+++ b/templates/view.html
@@ -115,10 +115,8 @@ $has_next = 1 if (($pn * 30) < $post_count);
       </ul>
     % }
     </div>
-    <link rel="stylesheet" href="http://yandex.st/highlightjs/8.0/styles/default.min.css">
-    <script src="http://yandex.st/highlightjs/8.0/highlight.min.js"></script>
-    <script src="/js/jquery-1.11.0.min.js"></script>
     <script src="/js/nav-dropdown.js"></script>
+    <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
   </body>
 </html>
         
