--- a/templates/index.html
+++ b/templates/index.html
@@ -4,14 +4,13 @@ use Render;
 use MongoDB;
 use boolean;
 
-my ($db,$threads,$count,$pn) = @_;
-my @threads = @$threads;
+use Database::Post;
+use Database::User;
 
-my $has_prev = 0;
-my $has_next = 0;
+my($req,$res,$threads,$pn) = @_;
 
-$has_prev = 1 if (($count > 30) && ($pn > 1));
-$has_next = 1 if (($pn * 30) < $count);
+my $ucookie = $req->get_cookies('userinfo');
+my $user = Database::User->decode_cookie($ucookie);
 %>
 
 <html>
@@ -38,7 +37,8 @@ $has_next = 1 if (($pn * 30) < $count);
         <ul class="navbar-links">
           <li><a href="javascript:;">New</a></li>
           <li class="nav-dropdown">
-            <a href="javascript:;" class="nav-dropdown-link">ExampleUser</a>
+	    % if ($user) {
+            <a href="javascript:;" class="nav-dropdown-link"><%= $user->{name} %></a>
             <ul class="nav-dropdown-menu">
               <li><a href="javascript:;">User Center</a></li>
               <li class="nav-dropdown-sep"></li>
@@ -55,38 +55,36 @@ $has_next = 1 if (($pn * 30) < $count);
     </div>    
     
     <div class="container">
-      % if ($has_prev or $has_next) {
       <ul class="pager">
-	% if ($has_prev) {
+	% if ($thread->has_prev}) {
 	<li><a href="/index/<%= $pn - 1 %>">&lt;Prev</a></li>
 	% }
-	% if ($has_next) {
+	% if ($thread->has_next) {
 	<li><a href="/index/<%= $pn + 1 %>">Next&gt;</a></li>
 	% }
       </ul>
-      % }
       
       <ul class="entry-list">
-	% for my $th (@threads) {
+	% for my $th (@{$threads->all}) {
 	<%
-	my $last = $db->get_collection('posts')->find({th => $th->{_id},hidden => false})->sort({datetime => -1})->next;
-	my $tauthor = $db->get_collection('users')->find({_id => $th->{author}})->next;
-	my $lauthor = $db->get_collection('users')->find({_id => $last->{author}})->next;
+	my $author = $th->author;
+	my $last = $th->posts->last;
+	my $lauthor = $last->author;
 	%>
 	<li><div class="entry">
-	  <h1><a href="/thread/view/<%= $th->{_id} %>"><%= $th->{title} %></a></h1>
-	  <span class="info-span info-span-left">Published by <%= $tauthor->{name} %> on <%= $th->{datetime}->strftime("%Y/%m/%d %H:%M:%S") %></span>
+	  <h1><a href="/thread/view/<%= $th->{id} %>"><%= $th->{title} %></a></h1>
+	  <span class="info-span info-span-left">Published by <%= $author->{name} %> on <%= $th->{datetime}->strftime("%Y/%m/%d %H:%M:%S") %></span>
 	  <span class="info-span info-span-right">Last Replied by <%= $lauthor->{name} %> on <%= $last->{datetime}->strftime("%Y/%m/%d %H:%M:%S") %></span>
 	</div></li>
 	% }
       </ul>
       
-      % if ($has_prev or $has_next) {
+      % if ($th->has_prev or $th->has_next) {
       <ul class="pager">
-	% if ($has_prev) {
+	% if ($th->has_prev) {
 	<li><a href="/index/<%= $pn - 1 %>">&lt;Prev</a></li>
 	% }
-	% if ($has_next) {
+	% if ($th->has_next) {
 	<li><a href="/index/<%= $pn + 1 %>">Next&gt;</a></li>
 	% }
       </ul>
