--- a/css/s.css
+++ b/css/s.css
@@ -88,7 +88,7 @@
   padding-bottom: 10px;
 }
 pre {
-  border: 1px solid #cccccc;
+  border-left: 5px solid #cccccc;
   padding-left: 10px;
   font-size: 15px;
   word-break: break-all;
@@ -147,9 +147,9 @@ html {
   color: #5555ff;
 }
 #posts .post .post-body .post-content {
-  font-size: 18px;
+  font-size: 17px;
   text-align: justify;
-  line-height: 25px;
+  line-height: 23px;
   font-weight: 100;
 }
 .pager {
