--- a/less/page.less
+++ b/less/page.less
@@ -7,7 +7,7 @@
 }
 
 pre {
-    border: 1px solid @border-color;
+    border-left: 5px solid @border-color;
     padding-left: 10px;
     font-size: 15px;
     word-break: break-all;
