--- a/less/page.less
+++ b/less/page.less
@@ -3,7 +3,7 @@
 #header {
     border-bottom:1px solid @border-color;
     margin-bottom:10px;
-    padding-bottom:10px;
+    padding-bottom:25px;
 }
 
 pre {
@@ -22,5 +22,5 @@ p code {
 }
 
 html {
-        font-family:Inconsolata,Monospace,"Trebuchet MS","Times New Roman",Times,"Wenquanyi Micro Hei","Microsoft YaHei";
+        font-family:Monospace,"Trebuchet MS","Times New Roman",Times,"Wenquanyi Micro Hei","Microsoft YaHei";
 }
