--- a/less/form.less
+++ b/less/form.less
@@ -22,6 +22,12 @@ form {
 	border:none;
 	border-bottom:1px solid @border-color;
     }
+
+    textarea {
+	font-size:18px;
+	border:1px solid @border-color;
+	background:none!important;
+    }
 }
 
 input[type="submit"] {
@@ -29,6 +35,7 @@ input[type="submit"] {
     color:@button-color;
     border:none; 
     padding:0!important;
+    margin-left:15px;
     transition:ease 0.1s;
     &:hover {
 	transition:ease 0.1s;
