--- a/less/list.less
+++ b/less/list.less
@@ -2,7 +2,7 @@
 
 .entry-list {
     list-style-type: none;
-    width:960px;
+    min-width:960px;
     margin:auto;
 
     .entry{
@@ -28,6 +28,7 @@
 	.info-span {
 	    position:absolute;
 	    bottom:10px;
+	    font-size:15px;
 	    
 	    &-left {
 		left:10px;
