--- a/less/s.less
+++ b/less/s.less
@@ -3,5 +3,5 @@
 @import 'post.less';
 @import 'pager.less';
 @import 'list.less';
-@import 'forum.less';
+@import 'form.less';
 @import 'alert.less';
