--- a/templates/view.html
+++ b/templates/view.html
@@ -10,7 +10,7 @@ my $uid;
 my $user;
 if ($ucookie) {
     $uid = Data::User->decode_cookie($ucookie);
-    $user = Data::User->by_id($uid);
+    $user = Data::User->by_id($uid) if($uid);
 }
 %>
 
@@ -28,7 +28,7 @@ if ($ucookie) {
         </a>
 
         <ul class="navbar-links">
-          <li><a href="/">Index</a></li>
+          <li><a href="/" data-instant>Index</a></li>
           <li><a href="#">Categories</a></li>
           <li><a href="#">Tags</a></li>
         </ul>
@@ -47,7 +47,7 @@ if ($ucookie) {
             </ul>
           </li>
 	  % } else {
-	  <li><a href="/login">Login</a></li>
+	  <li><a href="/login" data-instant>Login</a></li>
 	  <li><a href="javascript:;">Register</a></li>
 	  % }
         </ul>
@@ -55,7 +55,9 @@ if ($ucookie) {
     </nav>
 
     <div class="header" id="header">
-      <h1><%== $th->{title} %></h1><span>on <%== $th->{datetime}->ymd("/") %> by <%== $th->author->{name} %></span>
+      <h1 id="title"><%== $th->{title} %></h1>
+      <h3><%== "$th->{category}/$th->{subcategory}" %></h3>
+      <span>on <%== $th->{datetime}->ymd("/") %> by <%== $th->author->{name} %></span>
     </div>
     
     % if ($posts->has_prev or $posts->has_next) {
@@ -90,7 +92,7 @@ if ($ucookie) {
               <span>No.<%== $floor %> </span><span>posted on <%== $post->{datetime}->strftime("%Y/%m/%d %H:%M:%S") %></span>
             </div>
             <ul class="post-ops">
-              <li><a href="javascript:;">Reply</a></li>
+              <li><a href="javascript:;" onclick='createReply("<%== $floor %>","<%== $author->{id} %>")' class="reply-button">Reply</a></li>
             </ul>
           </div>
         
@@ -111,14 +113,46 @@ if ($ucookie) {
       </ul>
     % }
     </div>
-    <script type="text/x-mathjax-config;executed=true">
-     MathJax.Hub.Config({
-       tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}
-     });
+
+    % if ($user) {
+    <div class="reply_area">
+      <form action="/post/new" method="POST">
+	<div class="form-control-group">
+	  <textarea name="content" id="reply-area" style="display:block;width:100%;font-size:18px;" rows="7" placeholder="Enter your reply here"></textarea>
+	</div>
+	<input type="hidden" name="th" value="<%== $th->{id} %>" />
+	<input type="hidden" name="replyto" id="replyto" value="<%== $th->author->{id} %>" />
+	<input type="submit" value="Reply">
+      </form>
+    </div>
+    % }
+
+    <h3 style="display:none;position:fixed;bottom:0;right:0;color:#333;" id="save-notify">Saving...</h3>
+    <h3 style="display:none;position:fixed;bottom:0;right:0;color:#333;" id="load-notify">Loading...</h3>
+
+    <script type="text/javascript">
+     window.MathJax = {
+       tex2jax: {
+	 inlineMath: [ ['$','$'], ["\\(","\\)"] ],
+	 processEscapes: true
+       }
+     };
     </script>
-    <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="/js/nav-dropdown.js"></script>
+    
     <script src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
+    % if ($user and (($th->author->{id} eq $user->{id}) or $user->{jobs}{admin})) {
+    <script src="/js/edit-thread.js"></script>
+    % }
+    <script>
+     window.tid = "<%== $th->{id} %>";
+    </script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/instantclick/3.0.1/instantclick.min.js"></script>
+    <script>
+     InstantClick.init(50,true);
+    </script>
+    <script src="/js/nav-dropdown.js"></script>
+    <script src="/js/create-reply.js"></script>
     <link rel="stylesheet" href="http://yandex.st/highlightjs/8.0/styles/default.min.css">
     <script src="http://yandex.st/highlightjs/8.0/highlight.min.js"></script>
   </body>
