--- a/less/page.less
+++ b/less/page.less
@@ -24,3 +24,13 @@ p code {
 html {
         font-family:Monospace,"Trebuchet MS","Times New Roman",Times,"Wenquanyi Micro Hei","Microsoft YaHei";
 }
+
+.link {
+    display:block;
+    color:@button-color;
+    text-decoration:none;
+    transition:ease 0.3s;
+    &:hover {
+	color:@button-hover-color;
+    }
+}
