--- a/less/list.less
+++ b/less/list.less
@@ -12,7 +12,8 @@
 	
 	h1 {
 	    margin-top:0px;
-	    margin-bottom:30px;
+	    margin-bottom:5px;
+	    
 	    a {
 		display:block;
 		color:@button-color;
@@ -23,6 +24,11 @@
 	    &:hover a{
 		color:@button-hover-color;
 	    }
+	}
+
+	h3 {
+	    margin-top:0px;
+	    margin-bottom:30px;
 	}
 
 	.info-span {
