--- a/templates/login.html
+++ b/templates/login.html
@@ -22,7 +22,7 @@ my($error,$referer,$username) = @_;
 
         <ul class="navbar-links">
           <li><a href="/" data-instant>Index</a></li>
-          <li><a href="#">Categories</a></li>
+          <li><a href="/categories">Categories</a></li>
           <li><a href="#">Tags</a></li>
         </ul>
       </div>
