--- a/templates/view.html
+++ b/templates/view.html
@@ -30,7 +30,7 @@ if ($ucookie) {
 
         <ul class="navbar-links">
           <li><a href="/" data-instant>Index</a></li>
-          <li><a href="#">Categories</a></li>
+          <li><a href="/categories">Categories</a></li>
           <li><a href="#">Tags</a></li>
         </ul>
       </div>
@@ -38,7 +38,7 @@ if ($ucookie) {
       <div id="navbar-right">
         <ul class="navbar-links">
 	  % if ($user) {
-          <li><a href="javascript:;">New</a></li>
+          <li><a href="/new" data-instant>New</a></li>
           <li class="nav-dropdown">	    
             <a href="javascript:;" class="nav-dropdown-link"><%== $user->{name} %></a>
             <ul class="nav-dropdown-menu">
@@ -152,10 +152,15 @@ if ($ucookie) {
     <script>
      InstantClick.init(50,true);
     </script>
+    <link rel="stylesheet" href="http://yandex.st/highlightjs/8.0/styles/tomorrow.min.css">
+    <script src="http://yandex.st/highlightjs/8.0/highlight.min.js"></script>
+    <script>
+     +function() {
+       $('pre code').each(function(i, e) {hljs.highlightBlock(e)});
+     }();
+    </script>
     <script src="/js/nav-dropdown.js"></script>
     <script src="/js/create-reply.js"></script>
-    <link rel="stylesheet" href="http://yandex.st/highlightjs/8.0/styles/default.min.css">
-    <script src="http://yandex.st/highlightjs/8.0/highlight.min.js"></script>
   </body>
 </html>
         
