--- a/less/form.less
+++ b/less/form.less
@@ -2,11 +2,10 @@
 
 form {
     font-size:22px;
-    padding:0 200px;
 }
 
 .form-control-group {
-    padding:20px;
+    padding:30px 20px;
     label {
 	width:100px;;
 	color:@button-color;
@@ -16,6 +15,7 @@ form {
     
     input[type="text"],input[type="password"],input[type="email"] {
 	display:inline-block;
+	height:30px;
 	font-size:18px;
 	width:350px;
 	background:none!important;
@@ -36,6 +36,7 @@ input[type="submit"] {
     border:none; 
     padding:0!important;
     margin-left:15px;
+    font-size:24px;
     transition:ease 0.1s;
     &:hover {
 	transition:ease 0.1s;
