--- a/css/s.css
+++ b/css/s.css
@@ -223,10 +223,9 @@ h1 {
 }
 form {
   font-size: 22px;
-  padding: 0 200px;
 }
 .form-control-group {
-  padding: 20px;
+  padding: 30px 20px;
 }
 .form-control-group label {
   width: 100px;
@@ -238,6 +237,7 @@ form {
 .form-control-group input[type="password"],
 .form-control-group input[type="email"] {
   display: inline-block;
+  height: 30px;
   font-size: 18px;
   width: 350px;
   background: none!important;
@@ -255,6 +255,7 @@ input[type="submit"] {
   border: none;
   padding: 0!important;
   margin-left: 15px;
+  font-size: 24px;
   transition: ease 0.1s;
 }
 input[type="submit"]:hover {
