--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@ if ($ucookie) {
         </a>
 
         <ul class="navbar-links">
-          <li><a href="/" data-instant>Index</a></li>
+          <li><a href="/">Index</a></li>
           <li><a href="/categories">Categories</a></li>
           <li><a href="#">Tags</a></li>
         </ul>
@@ -38,17 +38,17 @@ if ($ucookie) {
       <div id="navbar-right">
         <ul class="navbar-links">
 	  % if ($user) {
-          <li><a href="/new" data-instant>New</a></li>
+          <li><a href="/new">New</a></li>
           <li class="nav-dropdown">	    
             <a href="javascript:;" class="nav-dropdown-link"><%== $user->{name} %></a>
             <ul class="nav-dropdown-menu">
               <li><a href="javascript:;">User Center</a></li>
               <li class="nav-dropdown-sep"></li>
-              <li><a href="/logout">Logout</a></li>
+              <li><a href="/logout" data-no-instant>Logout</a></li>
             </ul>
           </li>
 	  % } else {
-	  <li><a href="/login" data-instant>Login</a></li>
+	  <li><a href="/login">Login</a></li>
 	  <li><a href="javascript:;">Register</a></li>
 	  % }
         </ul>
@@ -104,7 +104,7 @@ if ($ucookie) {
     <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/instantclick/3.0.1/instantclick.min.js"></script>
     <script>
-     InstantClick.init(50,true);
+     InstantClick.init(50);
     </script>
     <script src="/js/nav-dropdown.js"></script>
   </body>
