--- a/templates/login.html
+++ b/templates/login.html
@@ -21,7 +21,7 @@ my($error,$referer,$username) = @_;
         </a>
 
         <ul class="navbar-links">
-          <li><a href="/" data-instant>Index</a></li>
+          <li><a href="/">Index</a></li>
           <li><a href="/categories">Categories</a></li>
           <li><a href="#">Tags</a></li>
         </ul>
@@ -38,12 +38,13 @@ my($error,$referer,$username) = @_;
       <h1><%== getcfg 'site_title' %></h1><span><%== getcfg 'site_subtitle' %></span>
     </div>    
 
-    <div class="container" style="width:960px;margin:auto;">
+    <div class="container" style="width:560px;margin:auto;">
+      <h1>Login</h1>
       <form method="POST" action="/login">
 	% if ($error) {
 	<div class="alert alert-failure">
 	  <h3>Wrong user name/password</h3>
-	  <span>Please check</span>
+	  <span>Please check your input</span>
 	</div>
 	% }
 	<div class="form-control-group">
@@ -61,7 +62,7 @@ my($error,$referer,$username) = @_;
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/instantclick/3.0.1/instantclick.min.js"></script>
     <script>
-     InstantClick.init(50,true);
+     InstantClick.init(50);
     </script>
     <script src="/js/nav-dropdown.js"></script>
     <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
