--- a/templates/new.html
+++ b/templates/new.html
@@ -28,7 +28,7 @@ if ($ucookie) {
         </a>
 
         <ul class="navbar-links">
-          <li><a href="/" data-instant>Index</a></li>
+          <li><a href="/">Index</a></li>
           <li><a href="/categories">Categories</a></li>
           <li><a href="#">Tags</a></li>
         </ul>
@@ -37,19 +37,19 @@ if ($ucookie) {
       <div id="navbar-right">
         <ul class="navbar-links">
 	  <li class="nav-dropdown">
-	    <a href="javascript:;" class="nav-dropdown-link">Drafts</a>
+	    <a href="javascript:;" class="nav-dropdown-link" data-no-instant>Drafts</a>
 	    <ul class="nav-dropdown-menu" id="drafts-menu">
-	      <li><a href="javascript:;" id="new-draft-button">New Draft</a></li>
+	      <li><a href="javascript:;" id="new-draft-button" data-no-instant>New Draft</a></li>
 	    </ul>
 	  </li>
-	  <li><a id="remove-button" href="javascript:;">Remove</a></li>
-          <li><a id="publish-button" href="javascript:;">Publish</a></li>
+	  <li><a id="remove-button" href="javascript:;" data-no-instant>Remove</a></li>
+          <li><a id="publish-button" href="javascript:;" data-no-instant>Publish</a></li>
           <li class="nav-dropdown">	    
             <a href="javascript:;" class="nav-dropdown-link"><%== $user->{name} %></a>
             <ul class="nav-dropdown-menu">
               <li><a href="javascript:;">User Center</a></li>
               <li class="nav-dropdown-sep"></li>
-              <li><a href="/logout">Logout</a></li>
+              <li><a href="/logout" data-no-instant>Logout</a></li>
             </ul>
           </li>
         </ul>
@@ -76,10 +76,6 @@ if ($ucookie) {
       <input name="tags" id="input-tags" />
       <textarea name="content" id="input-content"></textarea>
     </form>
-
-    <h3 style="display:none;position:fixed;bottom:0;right:0;color:#333;" id="save-notify">Saving...</h3>
-    <h3 style="display:none;position:fixed;bottom:0;right:0;color:#333;" id="publish-notify">Publishing...</h3>
-    
     <style>
      #container {
        width:800px;
@@ -146,7 +142,7 @@ if ($ucookie) {
     <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/instantclick/3.0.1/instantclick.min.js"></script>
     <script>
-     InstantClick.init(50,true);
+     InstantClick.init(50);
     </script>
     <script src="/js/new.js"></script>
     <script src="/js/nav-dropdown.js"></script>
