--- a/templates/categories.html
+++ b/templates/categories.html
@@ -32,7 +32,7 @@ if ($ucookie) {
         <ul class="navbar-links">
           <li><a href="/">Index</a></li>
           <li><a href="/categories">Categories</a></li>
-          <li><a href="#">Tags</a></li>
+          <li><a href="javascript:;">Tags</a></li>
         </ul>
       </div>
 
@@ -50,7 +50,7 @@ if ($ucookie) {
           </li>
 	  % } else {
 	  <li><a href="/login">Login</a></li>
-	  <li><a href="javascript:;">Register</a></li>
+	  <li><a href="/reg">Register</a></li>
 	  % }
         </ul>
       </div>
