--- a/templates/reg.html
+++ b/templates/reg.html
@@ -29,7 +29,7 @@ my($error,$referer,$username,$email) = @_;
 
       <div id="navbar-right">
         <ul class="navbar-links">
-	  <li><a href="javascript:;">Register</a></li>
+	  <li><a href="/reg">Register</a></li>
         </ul>
       </div>
     </nav>
