--- a/templates/category.html
+++ b/templates/category.html
@@ -51,7 +51,7 @@ if ($ucookie) {
           </li>
 	  % } else {
 	  <li><a href="/login">Login</a></li>
-	  <li><a href="javascript:;">Register</a></li>
+	  <li><a href="/reg">Register</a></li>
 	  % }
         </ul>
       </div>
