--- a/templates/view.html
+++ b/templates/view.html
@@ -49,7 +49,7 @@ if ($ucookie) {
           </li>
 	  % } else {
 	  <li><a href="/login">Login</a></li>
-	  <li><a href="javascript:;">Register</a></li>
+	  <li><a href="/reg">Register</a></li>
 	  % }
         </ul>
       </div>
